# vendor_xiaomi_proprietary_touch-driver

./: Android.mk  BUILD.bazel  OWNERS  README.md  target.bzl  target_variants.bzl  touch_modules.bzl  touch_modules_build.bzl
config/: Kconfig  touch_p2_consolidate.conf
o2/: Android.mk  Kbuild  syna_tcm2.c  syna_tcm2.h  syna_tcm2_platform_spi.c  syna_tcm2_testing.c  syna_xiaomi_driver.c  syna_xiaomi_driver.h
o8/: Android.mk  BUILD.bazel  Kbuild  Makefile  define_modules.bzl
p2/: Android.mk  Kbuild  syna_tcm2.c  syna_tcm2.h  syna_tcm2_platform_spi.c  syna_tcm2_runtime.h  syna_tcm2_testing.c  syna_tcm2_testing.h  syna_xiaomi_driver.c  syna_xiaomi_driver.h
p2/goodix/: Kbuild
p2/goodix/config/: xiaomi_touch.conf  xiaomi_touch.h  xiaomi_touch_factory.h
p2/qts/: qts_core.c
p2/tcm/: synaptics_touchcom_core_dev.h  synaptics_touchcom_core_v1.c  synaptics_touchcom_core_v2.c  synaptics_touchcom_func_base.c  synaptics_touchcom_func_reflash.c  synaptics_touchcom_func_romboot.c  synaptics_touchcom_func_touch.c
p81/: Android.mk  Kbuild
p81/config/: xiaomi_touch_factory.h
p81/nt36532/: nt36xxx.c  nt36xxx.h  nt36xxx_ext_proc.c  nt36xxx_mp_ctrlram.c  nt36xxx_mp_ctrlram.h
p82/: Android.mk  Makefile
p82/config/: xiaomi_touch.conf  xiaomi_touch.h
p82/nt36532/: Kbuild  nt36xxx.h  nt36xxx_fw_update.c  nt36xxx_mem_map.h
q200/: Android.mk  Kbuild  Makefile
q200/config/: xiaomi_touch.conf  xiaomi_touch.h  xiaomi_touch_factory.h
q200/focaltech_3383/: Kbuild  Kconfig  Makefile  focaltech_common.h  focaltech_config.h  focaltech_core.c  focaltech_core.h  focaltech_ex_fun.c  focaltech_flash.c  focaltech_flash.h  focaltech_gesture.c  focaltech_spi.c
xiaomi/: xiaomi_touch.h  xiaomi_touch_core.c  xiaomi_touch_device.c  xiaomi_touch_knock_data.c  xiaomi_touch_mode.c  xiaomi_touch_operations.c  xiaomi_touch_proc.c  xiaomi_touch_sys.c  xiaomi_touch_type_common.h
(+24 files in other folders)
